cmake_minimum_required(VERSION  3.20)
set(CMAKE_GENERATOR_PLATFORM x64)
project(openexe)
add_compile_options("$<$<C_COMPILER_ID:MSVC>:/utf-8>")
add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
add_executable(openexe WIN32 main.cpp)
ADD_DEFINITIONS(-DUNICODE)
ADD_DEFINITIONS(-D_UNICODE)
set_property(TARGET openexe PROPERTY CXX_STANDARD 17)
set_property(TARGET openexe PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(TARGET openexe PROPERTY VS_WINRT_COMPONENT ON)